--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,8 +7,20 @@
   "files": [
     "/dist"
   ],
+  "scripts": {
+    "types": "typechain --target ethers-v5 '../contracts/out/**/!(*.t|test).sol/!(*.abi).json' --out-dir types --discriminate-types",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@types/jest": "^29.5.0",
+    "ethers": "^5.3.0",
+    "jest": "^29.5.0",
+    "typechain": "^8.1.1"
+  },
   "dependencies": {
-    "ethers": "^6.2.2",
-    "js-ipfs": "^0.0.301"
+    "multiformats": "^11.0.2"
   }
 }
