--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@typechain/ethers-v5": "^10.2.0",
     "ethers": "^6.2.3",
     "typechain": "^8.1.1"
+  },
+  "dependencies": {
+    "typescript": "^5.0.4"
   }
 }
