--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ broadcast = 'packages/contracts/broadcast'
 cache_path = 'packages/contracts/cache'
 libs = ['packages/contracts/lib']
 solc = "0.8.18"
+chain_id = 31337
 fs_permissions = [{ access = "read-write", path = "./packages/contracts/"}]
 
 [profile.default.model_checker]
