--- a/.env.template
+++ b/.env.template
@@ -3,4 +3,4 @@ ANVIL="http://localhost:8545"
 BASE="https://goerli.base.org"
 SEPOLIA="https://rpc.sepolia.dev"
 # generate a mnemonic from https://iancoleman.io/bip39/
-MNEMONIC=
+MNEMONIC="test test test test test test test test test test test junk"
