--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "linkedpm",
+  "name": "@linkedpm/monorepo",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/solleedev/n3-law-registry.git",
@@ -8,11 +8,13 @@
   "workspaces": [
     "packages/sdk"
   ],
+  "private": true,
   "scripts": {
     "build": "forge build && yarn workspace @linkedpm/sdk types",
     "test": "yarn contracts:test && yarn sdk:test",
     "contracts:test": "forge test",
-    "sdk:test": "./sdktest.sh"
+    "sdk:test": "./sdktest.sh",
+    "sdk:publish": "yarn publish ./packages/sdk/"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
