--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -4,6 +4,7 @@
   "description": "Linked Markdown SDK for uploading/fetching",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "private": false,
   "files": [
     "/dist"
   ],
